--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 	padding: 0;
 	box-sizing: border-box;
 	overflow-x:hidden;
+	scroll-behavior: smooth;
 }
 
 ::-webkit-scrollbar {
@@ -136,19 +137,20 @@ h5 {
 	height: 300px;
 	object-fit: cover;
 	border-radius: 34% 66% 66% 34% / 31% 25% 75% 69%;
+	animation: transform 20s ease-in-out infinite both alternate;
 }
 
 .third .right {
 	display: grid;
-	grid-template-columns: 200px 200px;
+	grid-template-columns: 210px 210px;
     grid-template-rows: auto;
-    grid-gap: 10px;
+    grid-gap: 20px;
     justify-content: start;
 }
 
 .third .right img {
-	height: 200px;
-	width: 200px;
+	height: 210px;
+	width: 210px;
 	object-fit: cover;
 }
 
@@ -175,4 +177,62 @@ h5 {
 
 .facebook svg:hover {
 	fill: #3b5998;
+}
+
+#esimene {
+	border-radius: 66% 34% 26% 74% / 47% 41% 59% 53%;
+	animation: wobble 15s ease-in-out alternate infinite;
+	animation-play-state: paused;
+}
+
+#teine {
+	border-radius: 28% 72% 57% 43% / 53% 36% 64% 47%;
+	animation: wobble 15s ease-in-out alternate infinite;
+	animation-play-state: paused;
+}
+
+#kolmas {
+	border-radius: 14% 86% 73% 27% / 26% 50% 50% 74%;
+	animation: wobble 15s ease-in-out alternate infinite;
+	animation-play-state: paused;
+}
+
+#neljas {
+	border-radius: 46% 54% 28% 72% / 48% 77% 23% 52%;
+	animation: wobble 15s ease-in-out alternate infinite;
+	animation-play-state: paused;
+}
+
+#viies {
+	border-radius: 70% 30% 30% 70% / 70% 70% 30% 30%;
+	animation: wobble 15s ease-in-out alternate infinite;
+	animation-play-state: paused;
+}
+
+#kuues {
+	border-radius: 66% 34% 26% 74% / 47% 41% 59% 53%;
+	animation: wobble 15s ease-in-out alternate infinite;
+	animation-play-state: paused;
+}
+
+#esimene:hover, #teine:hover, #kolmas:hover, #neljas:hover, #viies:hover, #kuues:hover {
+	animation-play-state: running;
+}
+
+@keyframes wobble {
+  25% {border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;}
+  50% {border-radius: 60% 40% 36% 64% / 29% 72% 28% 71%;}
+  75% {border-radius: 19% 81% 80% 20% / 20% 47% 53% 80%;}
+  100% {border-radius: 54% 46% 36% 64% / 66% 58% 42% 34%;}
+}
+
+@keyframes transform {
+    0%,
+  100% { border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%; } 
+   14% { border-radius: 40% 60% 54% 46% / 49% 60% 40% 51%; } 
+   28% { border-radius: 54% 46% 38% 62% / 49% 70% 30% 51%; } 
+   42% { border-radius: 61% 39% 55% 45% / 61% 38% 62% 39%; } 
+   56% { border-radius: 61% 39% 67% 33% / 70% 50% 50% 30%; } 
+   70% { border-radius: 50% 50% 34% 66% / 56% 68% 32% 44%; } 
+   84% { border-radius: 46% 54% 50% 50% / 35% 61% 39% 65%; } 
 }
